// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup renders horizontally correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: space-between;
  -ms-flex-wrap: space-between;
  flex-wrap: space-between;
  height: auto;
  width: 100%;
  padding: 0rem 1.6rem 2.4rem 1.6rem;
  box-sizing: border-box;
}

.c0.vertical {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    role="radiogroup"
  >
    <div
      class="c0"
    >
      Option 1
    </div>
  </div>
</div>
`;

exports[`RadioButtonGroup renders vertically correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: space-between;
  -ms-flex-wrap: space-between;
  flex-wrap: space-between;
  height: auto;
  width: 100%;
  padding: 0rem 1.6rem 2.4rem 1.6rem;
  box-sizing: border-box;
}

.c0.vertical {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    role="radiogroup"
  >
    <div
      class="c0 vertical"
    >
      Option 1
    </div>
  </div>
</div>
`;
